<resources>
    <string name="app_name">Go-Laundry</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_laundry">Go-Laundry</string>
    <string name="ic_login">ic_login</string>
    <string name="log_in_to_account">Log in to Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_an_account">Create an Account</string>
    <string name="user">User</string>
    <string name="laundry_shop_owner">Laundry Shop Owner</string>
    <string name="rider">Rider</string>
    <string name="notification">Notification</string>
    <string name="username">User Full Name</string>
    <string name="rate">None</string>
    <string name="member">Member Rate:\u0020</string>
    <string name="month">July</string>
    <string name="topup">topup</string>
    <string name="balance_rm">Balance: RM</string>
    <string name="amount">0.00</string>
    <string name="monthly_top_up_amount_rm">Monthly top up amount: RM</string>
    <string name="progress">0%</string>
    <string name="top_up_rm">Top up RM</string>
    <string name="more_to_reach_next_level">\u0020more to reach next level</string>
    <string name="dashboard">\u0020Dashboard</string>
    <string name="spending">\u0020Spending</string>
    <string name="view">View</string>
    <string name="pending_collection">Pending Collection</string>
    <string name="_0">0</string>
    <string name="pending_receiving">Pending Receiving</string>
    <string name="monthly_orders">Monthly Orders</string>
    <string name="ic_pending_receiving">ic_pending_receiving</string>
    <string name="ic_pending_collection">ic_pending_collection</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="help_center">Help Center</string>
    <string name="helpcentersubtitle">We are here for you! How can we help?</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter title</string>
    <string name="what_trouble_do_you_faces">What trouble do you faces?</string>
    <string name="enter_message">Enter Message</string>
    <string name="we_will_get_back_to_you_within_3_working_days">We will get back to you within 3 working days</string>
    <string name="submit">Submit</string>
    <string name="ic_signup">ic_signup</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="gender">Gender</string>
    <string name="icno">Your IC No.</string>
    <string name="enter_nric_number">Enter NRIC number</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_terms_amp_conditions"><![CDATA[I agree to Terms & Conditions]]></string>
    <string name="register">Register</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email_address_and_get_the_reset_password_link">Enter your email address and get the reset password link</string>
    <string name="all_orders">All Orders</string>
    <string name="transactions">Transactions</string>
    <string name="latest">Latest</string>
    <string name="monthly_spending">Monthly Spending</string>
    <string name="view_all_history">View all history</string>
    <string name="last_month">last month</string>
    <string name="view_total_spending">View total spending</string>
    <string name="next_month">next month</string>
    <string name="read_all">Read all</string>
    <string name="search_laundry_shop">Search laundry shop</string>
    <string name="last_recently_ordered">Last recently ordered</string>
    <string name="dry_cleaning_laundry">Dry Cleaning Laundry</string>
    <string name="_5_0">5.0 </string>
    <string name="services_chosen">Services chosen:\u0020</string>
    <string name="washing">Washing</string>
    <string name="repeat_order">Repeat Order</string>
    <string name="discover">Discover</string>
    <string name="default_address">Default Address</string>
    <string name="all">All</string>
    <string name="filter">Filter</string>
    <string name="filter_laundry_shops">Filter laundry shops</string>
    <string name="ratings">Ratings:\u0020</string>
    <string name="distance">Distance:\u0020</string>
    <string name="_3km">10km</string>
    <string name="services">Services:\u0020</string>
    <string name="ironing">Ironing</string>
    <string name="drying">Drying</string>
    <string name="dry_cleaning">Dry Cleaning</string>
    <string name="_3">3</string>
    <string name="total_spending">Total Spending</string>
    <string name="next">Next</string>
    <string name="laundry">laundry</string>
    <string name="_34_tingkat_nibong_1_bandar_bayan_lepas_11950_bayan_lepas_pulau_penang">34, Tingkat Nibong 1, Bandar Bayan Lepas, 11950, Bayan Lepas, Pulau Penang</string>
    <string name="_012_4567890">012-4567890</string>
    <string name="hours">hours</string>
    <string name="monday">Monday</string>
    <string name="_9am_9pm">9am-9pm</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="call">call</string>
    <string name="location">location</string>
    <string name="save">save</string>
    <string name="all_clothes_will_be_washed_at_30_u2103_including_tumble_dried_and_folding">All clothes will be washed at 30℃, including tumble dried and folding.</string>
    <string name="note">Note for laundry shop…</string>
    <string name="leave_a_note">Leave a note</string>
    <string name="rm9_00_for_each_9kg">RM9.00 for each 9kg</string>
    <string name="less">less</string>
    <string name="add">add</string>
    <string name="pick_up_location">Pick Up Location</string>
    <string name="default_location">Default Location</string>
    <string name="edit">edit</string>
    <string name="no2_taman_nencagah_lintang_minden_11700_gelugor_pulau_pinang">No2, Taman Nencagah, Lintang Minden, 11700 Gelugor, Pulau Pinang.</string>
    <string name="laundry_shop_name">Laundry Shop Name</string>
    <string name="enter_laundry_shop_name">Enter laundry shop name</string>
    <string name="contact_number">Contact Number</string>
    <string name="enter_contact_number">Enter contact number</string>
    <string name="address">Address</string>
    <string name="choose_a_location">Choose a location</string>
    <string name="choose_from_map">Choose From Map</string>
    <string name="enter_a_location">Enter a location</string>
    <string name="my_addresses">My Addresses</string>
    <string name="done">Done</string>
    <string name="new_address">New Address</string>
    <string name="add_new_address">add new address</string>
    <string name="name">Name</string>
    <string name="e_g_work">e.g. Work</string>
    <string name="choose_the_location">Choose the location</string>
    <string name="address_details">Address Details</string>
    <string name="e_g_floor_unit_number">e.g.Floor, unit number</string>
    <string name="noti_title">Order Delivered</string>
    <string name="your_laundry_order_2309de6_will_be_delivered_by_the_rider_today_click_here_to_see_order_details_and_track_your_order">Your laundry order 2309DE6 will be delivered by the rider today. Click here to see order details and track your order.</string>
    <string name="_2023_06_08_05_25">2023-06-08 05:25</string>
    <string name="laundry_icon">laundry icon</string>
    <string name="order_id">Order ID:\u0020</string>
    <string name="_2309de68">2309DE68</string>
    <string name="_26_july_2023">26 July 2023</string>
    <string name="rm_30_00">RM 30.00</string>
    <string name="view_order">View Order</string>
    <string name="business_license">Business License</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="owner_full_name">Owner Full Name</string>
    <string name="personal_number">Personal Number</string>
    <string name="enter_personal_number">Enter personal number</string>
    <string name="plate_number">Plate Number</string>
    <string name="enter_plate_number">Enter plate number</string>
    <string name="face_photo">Face Photo</string>
    <string name="driving_license">Driving License</string>
    <string name="fullNameRequiredToast">Full name is required!</string>
    <string name="genderRequiredToast">Gender is required!</string>
    <string name="icRequiredToast">NRIC number is required!</string>
    <string name="phoneNoRequiredToast">Phone number is required!</string>
    <string name="phoneNoLessToast">Phone number should be at least 9 numbers!</string>
    <string name="emailRequiredToast">Email address is required!</string>
    <string name="emailInvalidToast">Email address is invalid!</string>
    <string name="passwordRequiredToast">Password is required!</string>
    <string name="passwordLessToast">Password should be at least 8 characters!</string>
    <string name="confirmPasswordRequiredToast">Confirm password is required!</string>
    <string name="confirmPasswordNotMatchToast">Both passwords are different!</string>
    <string name="icInvalidToast">NRIC number should be 12 numbers!</string>
    <string name="checkBoxToast">Please accept the terms and conditions to register account!</string>
    <string name="contactNoRequiredToast">Contact number is required!</string>
    <string name="contactNoLessToast">Contact number must be at least 9 characters!</string>
    <string name="plateNumberRequiredToast">Plate number is required!</string>
    <string name="plateNumberLessToast">Plate number should be more than 6 characters!</string>
    <string name="facePhotoRequiredToast">Face photo is required!</string>
    <string name="drivingLicensePhotoRequiredToast">Driving license photo is required!</string>
    <string name="to_collect">To Collect</string>
    <string name="to_receive">To Receive</string>
    <string name="complete">Complete</string>
    <string name="cancelled">Cancelled</string>
    <string name="laundry_terry">Laundry Terry</string>
    <string name="_20ff3e3">20FF3E3</string>
    <string name="x">x</string>
    <string name="_2">2</string>
    <string name="rm">RM</string>
    <string name="_4_50">4.50</string>
    <string name="titleRequiredToast">Title is required!</string>
    <string name="msgRequiredToast">Message is required!</string>
    <string name="need_help">Need help?</string>
    <string name="order_has_been_delivered">Order has been delivered</string>
    <string name="status_icon">Status Icon</string>
    <string name="more_icon">More Icon</string>
    <string name="_3_00">3.00</string>
    <string name="delivery_fee">Delivery Fee:\u0020</string>
    <string name="_50_00">50.00</string>
    <string name="order_total">Order Total:\u0020</string>
    <string name="tell_this_laundry_shop">Tell this laundry shop…</string>
    <string name="select_date">Select date</string>
    <string name="pick_up_date">Pick Up Date</string>
    <string name="your_order_will_be_picked_up_within_the_working_hours_on_the_chosen_date_please_make_sure_you_packs_the_order_as_well">Your order will be picked up within the working hours. Please make sure you packs the order well.</string>
    <string name="note_to_rider">Note to rider</string>
    <string name="e_g_meet_me_at_the_lobby">e.g. Meet me at the lobby</string>
</resources>