<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="4">

    <TextView
        android:id="@+id/row_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/ironing"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <RelativeLayout
        android:id="@+id/row_qty_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/row_tv_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/x"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/row_tv_show_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/row_tv_qty"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row_amount_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end">

        <TextView
            android:id="@+id/row_tv_rm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/rm"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/row_tv_show_rm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/row_tv_rm"
            android:text="@string/_4_50"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </RelativeLayout>
</LinearLayout>