<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/second_green">

    <TextView
        android:id="@+id/order_tv_pick_up_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/pick_up_date"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/order_et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_tv_pick_up_date"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="Select date"
        android:background="@drawable/custom_login"
        android:drawableEnd="@drawable/ic_month"
        android:hint="@string/select_date"
        android:inputType="none"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/text_color"
        android:textSize="15sp"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/order_tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_et_date"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/your_order_will_be_picked_up_within_the_working_hours_on_the_chosen_date_please_make_sure_you_packs_the_order_as_well"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/order_tv_note_rider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_tv_message"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/note_to_rider"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/order_et_note_rider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_tv_note_rider"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/custom_login"
        android:hint="@string/e_g_meet_me_at_the_lobby"
        android:inputType="text"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/text_color"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/order_tv_note_laundry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_et_note_rider"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tell_this_laundry_shop"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/order_et_note_laundry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_tv_note_laundry"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/custom_login"
        android:hint="@string/note"
        android:inputType="text"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/text_color"
        android:textSize="15sp"
        android:visibility="invisible" />

</RelativeLayout>